--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@stomp/stompjs": "^7.0.1",
     "axios": "^1.8.1",
     "next": "15.1.7",
+    "next-pwa": "^5.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sockjs-client": "^1.6.1",
