--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,12 +27,17 @@ jobs:
           docker build -t seuo/wannago-fe-image:latest .
           docker push seuo/wannago-fe-image:latest
 
+      - name: Set up SSH key
+        run: |
+          echo "${{ secrets.PEM_KEY }}" > private-key.pem
+          chmod 600 private-key.pem
+
       - name: Deploy to Server
         uses: appleboy/ssh-action@v0.1.6
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
-          password: ${{ secrets.SERVER_PASSWORD }}
+          key: ${{ secrets.PEM_KEY }}
           script: |
             docker pull seuo/wannago-fe-image:latest
             docker stop wannago_fe || true
