--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,7 @@ jobs:
     steps:
       - name: Set up SSH key
         run: |
-          echo "${{ secrets.PEM_KEY }}" > private-key.pem
+          echo "${{ secrets.PEM_KEY }}" | base64 --decode > private-key.pem
           chmod 600 private-key.pem
 
       - name: Deploy to Server
