--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,44 +6,56 @@ on:
       - main
 
 jobs:
+  # Build Job: Docker 이미지 빌드 및 푸시
   build:
     runs-on: ubuntu-latest
 
     steps:
+      # GitHub Secrets에서 PEM_KEY의 길이를 확인하여 유효성 검사
+      - name: GitHub Secrets 키 길이 확인
+        run: echo "${{ secrets.PEM_KEY }}" | wc -c
+
+      # 리포지토리 체크아웃
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      # 추가: deploy job에서도 .env.local 파일을 생성
+      # .env.local 파일 생성
       - name: Create .env.local file from Secrets
         run: |
           echo "NEXT_PUBLIC_SPRINGBOOT_URL=http://54.180.124.87" >> .env.local
           echo "NEXT_PUBLIC_S3_URL=https://wannagobucket.s3.ap-northeast-2.amazonaws.com" >> .env.local
           echo "NEXT_PUBLIC_WEBSOCKET_URL=http://54.180.124.87/ws" >> .env.local
 
+      # Docker Buildx 설정
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      # Docker Hub에 로그인
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      # Docker 이미지 빌드 및 푸시
       - name: Build and Push Docker Image
         run: |
           docker build --no-cache -t seuo/wannago-fe-image:latest .
           docker push seuo/wannago-fe-image:latest
 
+  # Deploy Job: 빌드 후 배포
   deploy:
-    needs: build
+    needs: build  # 빌드가 완료된 후에 실행
     runs-on: ubuntu-latest
 
     steps:
+      # SSH 키를 설정하여 서버에 연결
       - name: Set up SSH key
         run: |
           echo "${{ secrets.PEM_KEY }}" | base64 --decode > private-key.pem
           chmod 600 private-key.pem
 
+      # 서버에 배포 스크립트 실행
       - name: Deploy to Server
         uses: appleboy/ssh-action@v0.1.6
         with:
@@ -52,6 +64,6 @@ jobs:
           key: ${{ secrets.PEM_KEY }}
           script: |
             docker pull seuo/wannago-fe-image:latest
-            docker stop wannago_fe || true
-            docker rm wannago_fe || true
-            docker run -d --name wannago_fe -p 3000:3000 seuo/wannago-fe-image:latest
+            docker stop wannago_fe || true  # 이전에 실행 중인 컨테이너 종료
+            docker rm wannago_fe || true    # 이전에 실행 중인 컨테이너 삭제
+            docker run -d --name wannago_fe -p 3000:3000 seuo/wannago-fe-image:latest  # 새 컨테이너 실행
