--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    steps:
       # 리포지토리 체크아웃
       - name: Checkout Repository
         uses: actions/checkout@v3
