--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,7 +58,7 @@ jobs:
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.PEM_KEY }}
+          key: private-key.pem
           script: |
             docker pull seuo/wannago-fe-image:latest
             docker stop wannago_fe || true  # 이전에 실행 중인 컨테이너 종료
