--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,13 +45,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # SSH 비공개 키 디코딩 및 권한 설정
+      - name: Set up SSH Key
+        run: |
+          echo "${{ secrets.PEM_KEY }}" | base64 --decode > private-key.pem
+          chmod 600 private-key.pem
+
       # 서버에 배포 스크립트 실행
       - name: Deploy to Server
         uses: appleboy/ssh-action@v0.1.6
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
-          key_path: ${{ secrets.PEM_KEY }}
+          key_path: private-key.pem
           script: |
             docker pull seuo/wannago-fe-image:latest
             docker stop wannago_fe || true  # 이전에 실행 중인 컨테이너 종료
