--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,61 +6,94 @@ on:
       - main
 
 jobs:
-  # Build Job: Docker 이미지 빌드 및 푸시
   build:
     runs-on: ubuntu-latest
 
     steps:
-      # 리포지토리 체크아웃
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      # .env.local 파일 생성
       - name: Create .env.local file from Secrets
         run: |
           echo "NEXT_PUBLIC_SPRINGBOOT_URL=${{ secrets.NEXT_PUBLIC_SPRINGBOOT_URL }}" >> .env.local
           echo "NEXT_PUBLIC_S3_URL=${{ secrets.NEXT_PUBLIC_S3_URL }}" >> .env.local
           echo "NEXT_PUBLIC_WEBSOCKET_URL=${{ secrets.NEXT_PUBLIC_WEBSOCKET_URL }}" >> .env.local
 
-      # Docker Buildx 설정
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # Docker Hub에 로그인
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Docker 이미지 빌드 및 푸시
       - name: Build and Push Docker Image
         run: |
           docker build --no-cache -t seuo/wannago-fe-image:latest .
           docker push seuo/wannago-fe-image:latest
 
-  # Deploy Job: 빌드 후 배포
   deploy:
-    needs: build  # 빌드가 완료된 후에 실행
+    needs: build
     runs-on: ubuntu-latest
 
     steps:
-      # SSH 비공개 키 디코딩 및 권한 설정
       - name: Set up SSH Key
         run: |
           echo "${{ secrets.PEM_KEY }}" | base64 --decode > private-key.pem
           chmod 600 private-key.pem
 
-      # 서버에 배포 스크립트 실행
-      - name: Deploy to Server
-        # uses: appleboy/ssh-action@v0.1.6
+      - name: Deploy to Server using docker-compose and NGINX
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key_path: private-key.pem
           script: |
+            cd ~/wannago-deploy || mkdir ~/wannago-deploy && cd ~/wannago-deploy
+
+            # 최신 프론트 이미지 가져오기
             docker pull seuo/wannago-fe-image:latest
-            docker stop wannago_fe || true  # 이전에 실행 중인 컨테이너 종료
-            docker rm wannago_fe || true    # 이전에 실행 중인 컨테이너 삭제
-            docker run -d --name wannago_fe -p 80:3000 seuo/wannago-fe-image:latest  # 새 컨테이너 실행
+
+            # docker-compose.yml 생성 (🆕 nginx 포함)
+            cat <<EOF > docker-compose.yml
+            version: '3'
+            services:
+              frontend:
+                image: seuo/wannago-fe-image:latest
+                container_name: wannago_fe
+                restart: always
+                expose:
+                  - "3000" # nginx가 내부에서 접근할 포트
+
+              nginx:
+                image: nginx:latest
+                container_name: nginx-proxy
+                restart: always
+                ports:
+                  - "80:80"
+                volumes:
+                  - ./nginx.conf:/etc/nginx/nginx.conf:ro
+                depends_on:
+                  - frontend
+            EOF
+
+            # nginx.conf 생성 (🆕 기본 reverse proxy 설정)
+            cat <<EOF > nginx.conf
+            events {}
+            http {
+              server {
+                listen 80;
+                location / {
+                  proxy_pass http://frontend:3000;
+                  proxy_set_header Host \$host;
+                  proxy_set_header X-Real-IP \$remote_addr;
+                  proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+                  proxy_set_header X-Forwarded-Proto \$scheme;
+                }
+              }
+            }
+            EOF
+
+            docker compose down
+            docker compose up -d
