--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,7 @@ on:
       - main
 
 jobs:
+  # Build Job: Docker 이미지 빌드 및 푸시
   build:
     runs-on: ubuntu-latest
 
@@ -33,6 +34,7 @@ jobs:
           docker build --no-cache -t seuo/wannago-fe-image:latest .
           docker push seuo/wannago-fe-image:latest
 
+  # Deploy Job: 빌드 후 배포
   deploy:
     needs: build
     runs-on: ubuntu-latest
@@ -43,7 +45,7 @@ jobs:
           echo "${{ secrets.PEM_KEY }}" | base64 --decode > private-key.pem
           chmod 600 private-key.pem
 
-      - name: Deploy to Server using docker-compose and NGINX
+      - name: Deploy to Server
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_HOST }}
@@ -52,33 +54,47 @@ jobs:
           script: |
             cd ~/wannago-deploy || mkdir ~/wannago-deploy && cd ~/wannago-deploy
 
-            # 최신 프론트 이미지 가져오기
+            # 🔥 기존 컨테이너 중복 방지용 정리
+            docker stop wannago_fe || true
+            docker rm wannago_fe || true
+            docker stop nginx || true
+            docker rm nginx || true
+
+            # 최신 프론트엔드 이미지 pull
             docker pull seuo/wannago-fe-image:latest
 
-            # docker-compose.yml 생성 (🆕 nginx 포함)
+            # 🧾 docker-compose.yml 생성
             cat <<EOF > docker-compose.yml
-            version: '3'
+            version: "3.8"
+
             services:
               frontend:
-                image: seuo/wannago-fe-image:latest
                 container_name: wannago_fe
+                image: seuo/wannago-fe-image:latest
                 restart: always
                 expose:
-                  - "3000" # nginx가 내부에서 접근할 포트
+                  - "3000"
+                networks:
+                  - frontend-net
 
               nginx:
                 image: nginx:latest
-                container_name: nginx-proxy
-                restart: always
+                container_name: nginx
                 ports:
                   - "80:80"
                 volumes:
                   - ./nginx.conf:/etc/nginx/nginx.conf:ro
                 depends_on:
                   - frontend
+                networks:
+                  - frontend-net
+
+            networks:
+              frontend-net:
+                driver: bridge
             EOF
 
-            # nginx.conf 생성 (🆕 기본 reverse proxy 설정)
+            # 🛠️ nginx.conf 생성 (Next.js 3000 포트로 프록시)
             cat <<EOF > nginx.conf
             events {}
             http {
